fix loading spinner state in dark mode

--- a/src/components/TryExtensionLinkDialog.scss
+++ b/src/components/TryExtensionLinkDialog.scss
@@ -255,12 +255,25 @@
           flex-direction: column;
           align-items: center;
           justify-content: center;
-          background-color: rgba($white, 0.95);
+
+          &.light {
+            background-color: rgba($white, 0.95);
+            > p {
+              color: $black;
+            }
+          }
+
+          &.dark {
+            background-color: rgba($background-alt-dark, 0.9);
+            > p {
+              color: $white;
+            }
+          }
 
           > p {
             font-size: 12px;
             font-weight: bold;
-            color: $black;
+
             margin-top: 16px;
           }
         }
